# ha-xiaomi-vacuum

./: .devcontainer.json  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CODE_STYLE.md  CONTRIBUTING.md  LICENSE  README.md  XIAOMI_VACUUM_API.md  hacs.json  mypy.ini  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  requirements_test.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  release.yml  tests.yml  validate.yml
config/: configuration.yaml
custom_components/xiaomi_vacuum/: __init__.py  api.py  button.py  cached_device_info.py  cloud.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  icons.json  image.py  manifest.json  map_coordinator.py  repairs.py  select.py  sensor.py  vacuum.py
custom_components/xiaomi_vacuum/api/: __init__.py  client.py  errors.py
custom_components/xiaomi_vacuum/button/: __init__.py  dust_arrest.py
custom_components/xiaomi_vacuum/cloud/: __init__.py  client.py  connector.py  device_info.py  errors.py  responses.py
custom_components/xiaomi_vacuum/image/: __init__.py  map.py
custom_components/xiaomi_vacuum/select/: __init__.py  base.py  clean_times.py  mop_water_level.py  obstacle_avoidance.py  sweep_mop_type.py  sweep_route.py
custom_components/xiaomi_vacuum/sensor/: __init__.py  battery.py  dust_bag_life.py  error.py  error_code.py  filter_life.py  life_base.py  status.py  (+3 more)
scripts/: develop  lint  qr_test.py
tests/: conftest.py  test_api.py  test_button.py  test_cached_device_info.py  test_cloud.py  test_cloud_responses.py  test_config_flow.py  test_coordinator.py  test_entity.py  test_image.py  test_init.py  test_map_coordinator.py  test_repairs.py  test_select.py  test_sensor.py  test_vacuum.py
(+4 files in other folders)
